--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#0891b2" />
     <title>InfraHuB</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
